--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "watch": true,
-    "sourceRoot": "core",
+    "sourceRoot": "src",
     "outDir": "dist"
   },
   "exclude": [
