--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/commander": "^2.12.2",
     "@types/inquirer": "^6.5.0",
     "@types/lodash": "^4.14.149",
+    "@types/fs-extra": "^8.0.1",
     "@types/node": "^13.7.0",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
@@ -30,7 +31,9 @@
     "chalk": "^3.0.0",
     "colors": "^1.4.0",
     "commander": "^4.1.1",
+    "download-git-repo": "^3.0.2",
     "inquirer": "^7.0.4",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "fs-extra": "^8.1.0"
   }
 }
