--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "download-git-repo": "^3.0.2",
     "inquirer": "^7.0.4",
     "lodash": "^4.17.15",
-    "fs-extra": "^8.1.0"
+    "fs-extra": "^8.1.0",
+    "axios": "^0.19.2"
   }
 }
