--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "start": "ts-node-dev --respawn --transpileOnly  src/main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
@@ -19,6 +20,7 @@
     "@types/lodash": "^4.14.149",
     "@types/fs-extra": "^8.0.1",
     "@types/node": "^13.7.0",
+    "@types/walk": "^2.3.0",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
     "eslint": "^6.8.0",
@@ -35,6 +37,7 @@
     "inquirer": "^7.0.4",
     "lodash": "^4.17.15",
     "fs-extra": "^8.1.0",
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "walk": "^2.3.14"
   }
 }
