--- a/package.json
+++ b/package.json
@@ -14,13 +14,10 @@
   "author": "carrotWu",
   "license": "ISC",
   "devDependencies": {
-    "@types/chalk": "^2.2.0",
     "@types/commander": "^2.12.2",
     "@types/fs-extra": "^8.0.1",
     "@types/inquirer": "^6.5.0",
-    "@types/lodash": "^4.14.149",
     "@types/node": "^13.7.0",
-    "@types/walk": "^2.3.0",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
     "eslint": "^6.8.0",
@@ -31,15 +28,12 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "chalk": "^3.0.0",
     "colors": "^1.4.0",
     "commander": "^4.1.1",
     "compressing": "^1.5.0",
     "download-git-repo": "^3.0.2",
     "fs-extra": "^8.1.0",
     "inquirer": "^7.0.4",
-    "lodash": "^4.17.15",
-    "simple-git": "^1.131.0",
-    "walk": "^2.3.14"
+    "simple-git": "^1.131.0"
   }
 }
