--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   "devDependencies": {
     "@types/commander": "^2.12.2",
     "@types/fs-extra": "^8.0.1",
-    "@types/inquirer": "^6.5.0",
     "@types/module-alias": "^2.0.0",
     "@types/node": "^13.7.0",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
@@ -39,8 +38,8 @@
     "commander": "^4.1.1",
     "compressing": "^1.5.0",
     "download-git-repo": "^3.0.2",
+    "enquirer": "^2.3.5",
     "fs-extra": "^8.1.0",
-    "inquirer": "^7.0.4",
     "module-alias": "^2.2.2",
     "simple-git": "^1.131.0"
   },
