--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@carrotwu/wcli",
-  "version": "0.0.9",
+  "version": "1.0.0",
   "description": "A global cli tool that supports custom development, packaging and pushing",
   "main": "index.js",
   "scripts": {
@@ -25,8 +25,8 @@
     "@types/commander": "^2.12.2",
     "@types/fs-extra": "^8.0.1",
     "@types/module-alias": "^2.0.0",
-    "@types/update-notifier": "^4.1.0",
     "@types/node": "^13.7.0",
+    "@types/update-notifier": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
     "eslint": "^6.8.0",
@@ -45,6 +45,7 @@
     "enquirer": "^2.3.5",
     "fs-extra": "^8.1.0",
     "module-alias": "^2.2.2",
+    "ora": "^4.0.4",
     "simple-git": "^1.131.0",
     "update-notifier": "^4.1.0"
   },
