feat: 增加wcliconfig.json文件的初始化命令

--- a/wcliconfig.json
+++ b/wcliconfig.json
@@ -1,4 +1,1 @@
-{
-  "name": "@carrotwu/wcli",
-  "plugin": "wcli-project-plugin"
-}
+{"name":"@carrotwu/wcli","package":"yarn","path":{"output":"dist","public":"/"},"plugin":"wcli-project-plugin","devServer":{"port":8888,"https":false,"proxy":{}},"publish":null}
