--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "ts-node-dev --respawn --transpileOnly  src/main.ts"
+    "start": "ts-node-dev --respawn --transpileOnly  src/main.ts",
+    "lint": "eslint src --ext .ts --fix"
   },
   "bin": {
     "wcli": "./dist/main.js"
@@ -31,8 +32,11 @@
     "@typescript-eslint/parser": "^3.2.0",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.21.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.0.5",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.7.5"
   },
