chore: 更新项目所有依赖

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@carrotwu/wcli",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A global cli tool that supports custom development, packaging and pushing",
   "main": "index.js",
   "scripts": {
@@ -24,34 +24,34 @@
   "license": "MIT",
   "devDependencies": {
     "@types/commander": "^2.12.2",
-    "@types/fs-extra": "^9.0.1",
+    "@types/fs-extra": "^9.0.6",
     "@types/module-alias": "^2.0.0",
-    "@types/node": "^14.0.12",
-    "@types/update-notifier": "^4.1.0",
-    "@typescript-eslint/eslint-plugin": "^3.2.0",
-    "@typescript-eslint/parser": "^3.2.0",
-    "eslint": "^7.2.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-plugin-import": "^2.21.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.0.5",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.7.5"
+    "@types/node": "^14.14.21",
+    "@types/update-notifier": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
+    "eslint": "^7.18.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^2.2.1",
+    "ts-node-dev": "^1.1.1",
+    "typescript": "^4.1.3"
   },
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "colors": "^1.4.0",
-    "commander": "^5.1.0",
+    "commander": "^7.0.0",
     "compressing": "^1.5.1",
     "download-git-repo": "^3.0.2",
-    "enquirer": "^2.3.5",
+    "enquirer": "^2.3.6",
     "fs-extra": "^9.0.1",
     "module-alias": "^2.2.2",
-    "ora": "^4.0.4",
-    "simple-git": "^2.6.0",
-    "update-notifier": "^4.1.0"
+    "ora": "^5.2.0",
+    "simple-git": "^2.31.0",
+    "update-notifier": "^5.0.1"
   },
   "_moduleAliases": {
     "@utils": "dist/utils",
